Change monoDb url

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = 3000
-DB_URL= mongodb+srv://Chanuth:lxHcr7tu4hgEnp6O@cluster0.jzgbu.mongodb.net/?retryWrites=true&w=majority
+DB_URL= mongodb+srv://Y3S2:U5MN5nV69qYhhzVq@cluster0.58suk.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET_KEY = 1243566775443455666@@@@@###$$
 JWT_EXPIRES = 3d
 COOKIE_EXPIRE = 5
