--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-PORT = 3000
+PORT = 4000
 DB_URL= mongodb+srv://Y3S2:U5MN5nV69qYhhzVq@cluster0.58suk.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET_KEY = 1243566775443455666@@@@@###$$
 JWT_EXPIRES = 3d
@@ -8,3 +8,6 @@ SMPT_MAIL = kumaramaduka5@gmail.com
 SMPT_PASSWORD=ifwmnltgffwhtnzq
 SMPT_HOST=smtp.gmail.com
 SMPT_PORT=465
+CLOUDINARY_NAME=djnpm1f5w
+CLOUDINARY_API_KEY=792421724424473
+CLOUDINARY_API_SECRET=yH6OiOJBnJiQzcqFfpwi7LqC8w8
