--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = 4000
-DB_URL= mongodb+srv://chanuth1234:V61838aZlodqz5Q5@cluster0.o5kob.mongodb.net/?retryWrites=true&w=majority
+DB_URL= mongodb+srv://chanuth1234:1yjFeKrcfqvMt1mW@cluster0.o5kob.mongodb.net/
 JWT_SECRET_KEY = 1243566775443455666@@@@@###$$
 JWT_EXPIRES = 3d
 COOKIE_EXPIRE = 5
